<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/name"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:layout_below="@id/textView"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:entries="@array/question1_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:layout_below="@id/spinner1"
                android:textSize="18sp"/>

            <Spinner
                android:id="@id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:entries="@array/question2_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:layout_below="@id/spinner2"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:entries="@array/question3_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:layout_below="@id/spinner3"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:entries="@array/question4_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:layout_below="@id/spinner4"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:entries="@array/question5_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6"
                android:layout_below="@id/spinner5"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:entries="@array/question6_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7"
                android:layout_below="@id/spinner6"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:entries="@array/question7_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question8"
                android:layout_below="@id/spinner7"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:entries="@array/question8_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9"
                android:layout_below="@id/spinner8"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:entries="@array/question9_answers"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10"
                android:layout_below="@id/spinner9"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinner10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:entries="@array/question10_answers"
                android:minHeight="32dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_name"
                android:layout_below="@id/spinner10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:onClick="CheckClick"/>

        </RelativeLayout>




    </ScrollView>


</RelativeLayout>